removed bug for overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,5 @@
 body {
   font-family: "Urbanist", sans-serif;
-  /* overflow-x: hidden; */
-}
-*{
   overflow-x: hidden;
 }
 :root {
